--- a/new-nat-instance-v2.yml
+++ b/new-nat-instance-v2.yml
@@ -113,9 +113,7 @@ Resources:
                       pip install awscurl
                   fi
 
-                  #BASH_ACTION="ModifyInstanceAttribute"
                   BASH_SOURCE_DEST_CHECK="false"
-                  #VERSION="2016-11-15"
                   # Request a token for IMDSv2
                   tkn=$(curl -X PUT "http://169.254.169.254/latest/api/token" -H "X-aws-ec2-metadata-token-ttl-seconds: 21600")
 
@@ -140,7 +138,7 @@ Resources:
                       exit 255
                   fi
 
-                  #Extract BASH_region from az
+                  #Extract region from az
                   rgn=$(/bin/echo "${az}" | /bin/sed -n 's/\(\([a-z]\+-\)\+[0-9]\+\).*/\1/p')
 
                   # Get domain_name for calls
